# file_monitor

./: Cargo.toml  README.md
src/: cli.rs  main.rs  scanner.rs  watcher.rs
