[package]
name = "file_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
dirs = "6.0.0"
anyhow = "1.0.98"
notify = "8.0.0"
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
chrono = "0.4.41"

[profile.release]
opt-level = "z"
lto = true
